grammar.js
    source_file: $ => choice(
      // Full structure with header
      prec(1, seq(
        $.header_section,
        $.section_separator,
        optional($.notation_section)
      )),
      // Just notation (no header)
      $.notation_section
    ),

    // Separator between header and notation sections
    section_separator: $ => '%%',

    // Header section: contains metadata
    header_section: $ => repeat1($.header),

    // Header: name: value;
    // Headers with TeX content get special treatment for injection
    header: $ => prec(2, choice(
      $.header_tex_annotation,
      $.header_tex_mode_modifier,
      $.header_tex_mode_differentia,
      $.header_tex_def_macro,
      $.header_numeric_mode,
      $.header_numeric_staff_lines,
      $.header_numeric_nabc_lines,
      $.header_generic
    )),

    // Headers that accept TeX code (for LaTeX injection)
    header_generic: $ => seq(
      field('name', $.header_name),
      token.immediate(':'),
      field('value', choice(
        /[^;%]*/,
        seq(/[^;%]*/, ';')
      )),
      field('terminator', choice(';', ';;'))
    ),

    // Token to ensure "name:" is recognized atomically before syllable_text can match
    header_name: _ => token(prec(10, /[a-zA-Z0-9][a-zA-Z0-9-]*/)),

    // Notation section: sequence of notation items
    notation_section: $ => repeat1($.notation_item),

    // Notation item: must contain optional syllable text and mandatory note group.
    notation_item: $ => seq(
      optional($.syllable),
      $.note_group
    ),

    // Syllable: text outside parentheses
    syllable: $ => repeat1(
      choice(
        $.syllable_text,
        $.syllable_style_bold,
        $.syllable_style_colored,
        $.syllable_style_italic,
        $.syllable_style_small_caps,
        $.syllable_style_teletype,
        $.syllable_style_underline,
        $.syllable_style_bold_open,
        $.syllable_style_bold_close,
        $.syllable_style_colored_open,
        $.syllable_style_colored_close,
        $.syllable_style_italic_open,
        $.syllable_style_italic_close,
        $.syllable_style_small_caps_open,
        $.syllable_style_small_caps_close,
        $.syllable_style_teletype_open,
        $.syllable_style_teletype_close,
        $.syllable_style_underline_open,
        $.syllable_style_underline_close,
        $.syllable_control_clear,
        $.syllable_control_elision,
        $.syllable_control_euouae,
        $.syllable_control_elision_open,
        $.syllable_control_elision_close,
        $.syllable_control_euouae_open,
        $.syllable_control_euouae_close,
        $.syllable_control_no_line_break_open,
        $.syllable_control_no_line_break_close,
        $.syllable_control_protrusion,
        $.syllable_other_above_lines_text,
        $.syllable_other_special_character,
        $.syllable_other_verbatim,
        $.syllable_translation,
        $.syllable_centering,
        $.syllable_escape_sequence
      )
    ),

    syllable_text: $ => /[^\s${}\\<>%()\[\]]+/,

    // Syllable style tags
    // Complete tags: <b>text</b> - preferred for self-contained content
    // Cross-syllable: text1<b>(notes) text2</b>(notes) - tags span multiple notation_items
    syllable_style_bold: $ => prec.dynamic(1, seq(
      '<',
      'b',
      '>',
      optional(field('content', $.syllable)),
      '</',
      'b',
      '>'
    )),
    syllable_style_colored: $ => prec.dynamic(1, seq(
      '<',
      'c',
      '>',
      optional(field('content', $.syllable)),
      '</',
      'c',
      '>'
    )),
    syllable_style_italic: $ => prec.dynamic(1, seq(
      '<',
      'i',
      '>',
      optional(field('content', $.syllable)),
      '</',
      'i',
      '>'
    )),
    syllable_style_small_caps: $ => prec.dynamic(1, seq(
      '<',
      'sc',
      '>',
      optional(field('content', $.syllable)),
      '</',
      'sc',
      '>'
    )),
    syllable_style_teletype: $ => prec.dynamic(1, seq(
      '<',
      'tt',
      '>',
      optional(field('content', $.syllable)),
      '</',
      'tt',
      '>'
    )),
    syllable_style_underline: $ => prec.dynamic(1, seq(
      '<',
      'ul',
      '>',
      optional(field('content', $.syllable)),
      '</',
      'ul',
      '>'
    )),

    // Cross-syllable style tags (simple open/close tags)
    // These allow tags to span multiple syllables when used separately
    // Example: text1<b>(f) text2</b>(g) - where <b> opens in first syllable, closes in second
    syllable_control_clear: $ => seq(
      '<',
      'clear',
      optional('/'),
      '>'
    ),

    // Control tags for special text handling
    syllable_control_elision: $ => prec.dynamic(1, seq(
      '<',
      'e',
      '>',
      optional(field('content', $.syllable)),
      '</',
      'e',
      '>'
    )),

    syllable_control_euouae: $ => prec.dynamic(1, seq(
      '<',
      'eu',
      '>',
      optional(field('content', $.syllable)),
      '</',
      'eu',
      '>'
    )),

    // Cross-syllable control tags (simple open/close tags)
    syllable_control_protrusion: $ => seq(
      '<',
      'pr',
      optional(
        seq(
          ':',
          /[0-9]*\.?[0-9]+/
        )
      ),
      optional('/'),
      '>'
    ),

    // Other tags
    syllable_other_above_lines_text: $ => seq(
      '<',
      'alt',
      '>',
      optional(field('content', $.syllable)),
      '</',
      'alt',
      '>'
    ),
    syllable_other_special_character: $ => seq(
      '<',
      'sp',
      '>',
      optional(field('content', $.syllable)),
      '</',
      'sp',
      '>'
    ),
    syllable_other_verbatim: $ => seq(
      '<',
      'v',
      '>',
      optional(field('tex_code', $.tex_code_verbatim)),
      '</',
      'v',
      '>'
    ),

    // TeX code content for <v> tags (for injection) 
    syllable_translation: $ => seq(
      '[',
      optional(/[^\]]*/),
      ']'
    ),

    // Lyric centering: {text}
    syllable_centering: $ => seq(
      '{',
      optional(/[^}]*/),
      '}'
    ),

    // Escape sequence: $ followed by character
    syllable_escape_sequence: _ => seq('$', /./),

    // Note group: (notes) - can contain GABC and/or NABC snippets
    note_group: $ => seq(
      '(',
      optional($.snippet_list),
      ')'
    ),

    // Snippet list: GABC snippets and/or NABC snippets separated by |
    snippet_list: $ => choice(
      // Simple case: single GABC snippet (no alternation)
      $.gabc_snippet,

      // Complex case: alternating snippets
      seq(
        field('first', $.gabc_snippet),
        repeat1(
          seq(
            '|',
            field('alternate', $._alternating_snippet)
          )
        )
      )
    ),

    // Alternating snippet: prefer NABC in alternation contexts to reduce
    // ambiguity with generic GABC repetitions when using `|`.
    _alternating_snippet: $ => choice(
      prec(2, $.nabc_snippet),
      prec(1, $.gabc_snippet)
    ),

    // GABC snippet: notes and other GABC elements
    gabc_snippet: $ => repeat1(
      choice(
        $.gabc_neume,
        $.gabc_alteration,
        $._gabc_neume_fusion,
        $.gabc_spacing,
        $._gabc_symbol,
        $.gabc_separation_bar,
        // 6.4.13 Custos
        $._gabc_custos,
        $._gabc_line_break,
        // GABC Attributes
        $.gabc_attribute,
        $._gabc_macro,
        // 6.4.12 Clefs - try AFTER neumes to avoid 'c'/'f' ambiguity
        $._gabc_clef_or_link
      )
    ),

    _liquescence: $ => choice(
      alias(token.immediate('~'), $.deminutus),
      alias(token.immediate('<'), $.augmented),
      alias(token.immediate('>'), $.diminished)
    ),

    _orientation: $ => choice(
      alias(token.immediate('0'), $.downwards),
      alias(token.immediate('1'), $.upwards)
    ),

    _leaning: $ => choice(
      alias(token.immediate('0'), $.left_leaning),
      alias(token.immediate('1'), $.right_leaning),
      alias(token.immediate('2'), $.non_leaning)
    ),

    // 6.4.2 One-Note Neumes (includes complex neumes from 6.4.5)
    gabc_neume: $ => seq(
      choice(
        // Initio debilis
        seq(
          field('shape', alias('-', $.initio_debilis)),
          field('pitch', $.pitch_lowercase)
        ),
        // Oriscus scapus
        // NOTE: Must be preceded by another gabc_neume or '@'
        seq(
          field('pitch', $.pitch_lowercase),
          field('shape', alias(token.immediate('O'), $.oriscus_scapus)),
          optional(field('orientation', $._orientation))
        ),
        // Quilisma
        // NOTE: Must be followed by another gabc_neume or '@'
        seq(
          field('pitch', $.pitch_lowercase),
          field('shape', alias(token.immediate('w'), $.quilisma))
        ),
        // Quadratum
        // NOTE: Must be followed by another gabc_neume or '@'
        seq(
          field('pitch', $.pitch_lowercase),
          field('shape', alias(token.immediate('q'), $.quadratum))
        ),
        // Quilisma quadratum
        // NOTE: Must be followed by another gabc_neume or '@'
        seq(
          field('pitch', $.pitch_lowercase),
          field('shape', alias(token.immediate('W'), $.quilisma_quadratum))
        ),
        // Punctum inclinatum: upper pitch + optional leaning + optional liquescence
        seq(
          field('pitch', $.pitch_uppercase),
          optional(field('leaning', $._leaning)),
          optional(field('liquescence', $._liquescence))
        ),
        // Oriscus with optional orientation and liquescence
        seq(
          field('pitch', $.pitch_lowercase),
          field('shape', alias(token.immediate('o'), $.oriscus)),
          optional(field('orientation', $._orientation)),
          optional(field('liquescence', $._liquescence))
        ),
        // Stropha variants with optional liquescence
        seq(
          field('pitch', $.pitch_lowercase),
          field('shape', choice(
            alias(token.immediate('s'), $.stropha),
            alias(token.immediate('ss'), $.distropha),
            alias(token.immediate('sss'), $.tristropha)
          )),
          optional(field('liquescence', $._liquescence))
        ),
        // Virga variants
        seq(
          field('pitch', $.pitch_lowercase),
          field('shape', choice(
            alias(token.immediate('v'), $.virga),
            alias(token.immediate('V'), $.virga_reversa),
            alias(token.immediate('vv'), $.bivirga),
            alias(token.immediate('vvv'), $.trivirga)
          ))
        ),
        // Cavum variants
        seq(
          field('pitch', $.pitch_lowercase),
          field('shape', choice(
            alias(token.immediate('r'), $.cavum),
            alias(token.immediate('R'), $.punctum_linea),
            alias(token.immediate('r0'), $.cavum_linea)
          ))
        ),
        // Linea
        seq(
          field('pitch', $.pitch_lowercase),
          field('shape', alias(token.immediate('='), $.linea))
        ),
        // Punctum quadratum: just pitch + optional liquescence (must come last)
        seq(
          field('pitch', $.pitch_lowercase),
          optional(field('liquescence', $._liquescence))
        )
      ),
      // Additional neume signs (punctum mora, ictus, episema, accents, musica ficta)
      repeat(field('extra_symbol', $.gabc_extra_symbol))
    ),

    // 6.4.2.1 Additional Neume Signs
    _gabc_neume_fusion: $ => choice(
      $.gabc_neume_fusion,
      $.gabc_neume_fusion_group
    ),

    _gabc_symbol: $ => repeat1($.gabc_extra_symbol),

    // 6.4.11 Separation Bars
    gabc_separation_bar: $ => seq(
      field('type', choice(
        alias('`', $.virgula),
        alias('`0', $.virgula_upper_ledger_line),
        alias('^', $.divisio_minimis),
        alias('^0', $.divisio_minimis_upper_ledger_line),
        alias(',', $.divisio_minima),
        alias(',0', $.divisio_minima_upper_ledger_line),
        alias(';', $.divisio_minor),
        alias(':', $.divisio_maior),
        alias(':?', $.divisio_maior_dotted),
        alias('::', $.divisio_finalis),
        seq(
          alias(';', $.dominican_bar),
          field('position', /[1-8]/)
        )
      )),
      optional(field('modifier', $._gabc_bar_modifier))
    ),

    _gabc_bar_modifier: $ => choice(
      alias(token.immediate("'"), $.vertical_episema),
      alias(token.immediate('_'), $.brace)
    ),

    // 6.4.12 Clefs
    _gabc_clef_or_link: $ => choice(
      $.gabc_clef,
      $.gabc_clef_link
    ),

    gabc_clef: $ => choice(
      $._gabc_clef_c1, $._gabc_clef_c2, $._gabc_clef_c3, $._gabc_clef_c4,
      $._gabc_clef_f1, $._gabc_clef_f2, $._gabc_clef_f3, $._gabc_clef_f4,
      $._gabc_clef_cb1, $._gabc_clef_cb2, $._gabc_clef_cb3, $._gabc_clef_cb4
    ),

    _gabc_clef_c1: $ => field('name', alias(token(prec(20, 'c1')), $.c_clef)),
    _gabc_clef_c2: $ => field('name', alias(token(prec(20, 'c2')), $.c_clef)),
    _gabc_clef_c3: $ => field('name', alias(token(prec(20, 'c3')), $.c_clef)),
    _gabc_clef_c4: $ => field('name', alias(token(prec(20, 'c4')), $.c_clef)),

    _gabc_clef_f1: $ => field('name', alias(token(prec(20, 'f1')), $.f_clef)),
    _gabc_clef_f2: $ => field('name', alias(token(prec(20, 'f2')), $.f_clef)),
    _gabc_clef_f3: $ => field('name', alias(token(prec(20, 'f3')), $.f_clef)),
    _gabc_clef_f4: $ => field('name', alias(token(prec(20, 'f4')), $.f_clef)),

    _gabc_clef_cb1: $ => field('name', alias(token(prec(20, 'cb1')), $.c_clef_flat)),
    _gabc_clef_cb2: $ => field('name', alias(token(prec(20, 'cb2')), $.c_clef_flat)),
    _gabc_clef_cb3: $ => field('name', alias(token(prec(20, 'cb3')), $.c_clef_flat)),
    _gabc_clef_cb4: $ => field('name', alias(token(prec(20, 'cb4')), $.c_clef_flat)),

    _gabc_custos: $ => choice(
      alias('z0', $.custos_auto_pitch),
      seq(
        field('pitch', $.pitch_lowercase),
        field('symbol', alias('+', $.custos_symbol))
      )
    ),

    // 6.4.14 Line break
    _gabc_line_break: $ => seq(
      field('type', choice(
        alias('z', $.justified_line_break),
        alias('Z', $.ragged_line_break)
      )),
      optional(field('custos_modifier', choice(
        alias('+', $.force_custos),
        alias('-', $.disable_custos)
      )))
    ),

    // 6.4.15 Choral Signs
    // [cs:text]
    _gabc_macro: $ => seq(
      '[',
      seq(
        choice(
          'nm', // Note Level
          'gm', // Glyph Level
          'em', // Element Level
          'altm' // Element Level (alt syntax)
        ),
        /[0-9]/
      ),
      ']'
    ),

    /* ========================================================================================

    NABC NOTATION RULES

    ======================================================================================== */

    // NABC snippet: sequence of complex glyph descriptors
    comment: $ => seq('%', /.*/)
  }
});
