test/corpus/00-basic-no-notes.txt
================================================================================
Clef only
================================================================================

name: Clef only;

%%

(c4) (::)

--------------------------------------------------------------------------------

(source_file
  (header_section
    (header
      name: (header_name)
      value: (header_value
        (single_line_header_value_terminated
          (single_line_header_value)))))
  (section_separator)
  (notation_section
    (notation_item
      (note_group
        (snippet_list
          single: (gabc_snippet
            (gabc_clef)))))
    (notation_item
      (note_group
        (snippet_list
          single: (gabc_snippet
            (gabc_separation_bar
              type: (divisio_finalis))))))))

================================================================================
No lyrics
================================================================================

name: No lyrics;

%%

(c4) () ()    ()()
()()()

()()()()

(::)

--------------------------------------------------------------------------------

(source_file
  (header_section
    (header
      name: (header_name)
      value: (header_value
        (single_line_header_value_terminated
          (single_line_header_value)))))
  (section_separator)
  (notation_section
    (notation_item
      (note_group
        (snippet_list
          single: (gabc_snippet
            (gabc_clef)))))
    (notation_item
      (note_group))
    (notation_item
      (note_group))
    (notation_item
      (note_group))
    (notation_item
      (note_group))
    (notation_item
      (note_group))
    (notation_item
      (note_group))
    (notation_item
      (note_group))
    (notation_item
      (note_group))
    (notation_item
      (note_group))
    (notation_item
      (note_group))
    (notation_item
      (note_group))
    (notation_item
      (note_group
        (snippet_list
          single: (gabc_snippet
            (gabc_separation_bar
              type: (divisio_finalis))))))))

================================================================================
Basic lyrics
================================================================================

name: Basic lyrics;

%%

(c4) Al()le()lú()ia,()

al()le()lú()ia,()     al()le()lú()ia.()

(::)

--------------------------------------------------------------------------------

(source_file
  (header_section
    (header
      name: (header_name)
      value: (header_value
        (single_line_header_value_terminated
          (single_line_header_value)))))
  (section_separator)
  (notation_section
    (notation_item
      (note_group
        (snippet_list
          single: (gabc_snippet
            (gabc_clef)))))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (note_group
        (snippet_list
          single: (gabc_snippet
            (gabc_separation_bar
              type: (divisio_finalis))))))))

================================================================================
Basic lyrics (with comments)
================================================================================

name: Basic lyrics (with comments);
% This is a comment

%%

(c4) Al()le()lú()ia,() % A comment

al()le()lú()ia,()
% Another comment
al()le()lú()ia.()

(::)

--------------------------------------------------------------------------------

(source_file
  (header_section
    (header
      name: (header_name)
      value: (header_value
        (single_line_header_value_terminated
          (single_line_header_value)))))
  (comment)
  (section_separator)
  (notation_section
    (notation_item
      (note_group
        (snippet_list
          single: (gabc_snippet
            (gabc_clef)))))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (comment)
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (comment)
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (note_group
        (snippet_list
          single: (gabc_snippet
            (gabc_separation_bar
              type: (divisio_finalis))))))))
