test/corpus/00-basics.txt
================================================================================
No lyrics
================================================================================

name: No lyrics;

%%

() ()    ()()
()()() 

()()()()

--------------------------------------------------------------------------------

(source_file
  (header_section
    (header
      (header_generic
      name: (header_name))))
  (section_separator)
  (notation_section
    (notation_item
      (note_group))
    (notation_item
      (note_group))
    (notation_item
      (note_group))
    (notation_item
      (note_group))
    (notation_item
      (note_group))
    (notation_item
      (note_group))
    (notation_item
      (note_group))
    (notation_item
      (note_group))
    (notation_item
      (note_group))
    (notation_item
      (note_group))
    (notation_item
      (note_group))))

================================================================================
Basic lyrics
================================================================================

name: Basic lyrics;

%%

Al()le()lú()ia,()

al()le()lú()ia,()     al()le()lú()ia.()

--------------------------------------------------------------------------------

(source_file
  (header_section
    (header
      (header_generic
      name: (header_name))))
  (section_separator)
  (notation_section
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))))

================================================================================
Basic lyrics (with comments)
================================================================================

name: Basic lyrics (with comments);
% This is a comment

%%

Al()le()lú()ia,() % A comment

al()le()lú()ia,()
% Another comment
al()le()lú()ia.()

--------------------------------------------------------------------------------

(source_file
  (header_section
    (header
      (header_generic
      name: (header_name))))
  (comment)
  (section_separator)
  (notation_section
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (comment)
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (comment)
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))))

================================================================================
Multiline header
================================================================================

name: Multiline header test;
commentary: This is a long commentary
that spans multiple lines
and contains various information;;

%%

Al()le()lu()ia()

--------------------------------------------------------------------------------

(source_file
  (header_section
    (header
      (header_generic
      name: (header_name)))
    (header
      (header_generic
      name: (header_name))))
  (section_separator)
  (notation_section
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))))
