test/corpus/00-clef-only.txt
=================================================================================
Clef only
=================================================================================

name: Clef only;

%%

(c4) (::)

--------------------------------------------------------------------------------

(source_file
  (header_section
    (header
      name: (header_name)
      value: (header_value
        (single_line_header_value_terminated
          (single_line_header_value)))))
  (section_separator)
  (notation_section
    (notation_item
      (note_group
        (snippet_list
          single: (gabc_snippet
            (gabc_clef)))))
    (notation_item
      (note_group
        (snippet_list
          single: (gabc_snippet))))))
