test/corpus/01-lyrics-notation.txt
================================================================================
Style tags
================================================================================

name: Style tags test;

%%

<b>Al</b>(c)<i>le</i>(d)<sc>lu</sc>(e)<tt>ia</tt>,(f)

<c>Al</c>(c)<ul>le</ul>(d)<sc>lu</sc>(e)<tt>ia</tt>,(f)

(::)

--------------------------------------------------------------------------------

(source_file
  (header_section
    (header
      name: (header_name)
      value: (header_value
        (single_line_header_value_terminated
          (single_line_header_value)))))
  (section_separator)
  (notation_section
    (notation_item
      (syllable
        (syllable_style_bold
          (syllable
            (syllable_text))))
      (note_group
        (snippet_list
          single: (gabc_snippet
            (gabc_neume
              pitch: (pitch))))))
    (notation_item
      (syllable
        (syllable_style_italic
          (syllable
            (syllable_text))))
      (note_group
        (snippet_list
          single: (gabc_snippet
            (gabc_neume
              pitch: (pitch))))))
    (notation_item
      (syllable
        (syllable_style_small_caps
          (syllable
            (syllable_text))))
      (note_group
        (snippet_list
          single: (gabc_snippet
            (gabc_neume
              pitch: (pitch))))))
    (notation_item
      (syllable
        (syllable_style_teletype
          (syllable
            (syllable_text)))
        (syllable_text))
      (note_group
        (snippet_list
          single: (gabc_snippet
            (gabc_neume
              pitch: (pitch))))))
    (notation_item
      (syllable
        (syllable_style_colored
          (syllable
            (syllable_text))))
      (note_group
        (snippet_list
          single: (gabc_snippet
            (gabc_neume
              pitch: (pitch))))))
    (notation_item
      (syllable
        (syllable_style_underline
          (syllable
            (syllable_text))))
      (note_group
        (snippet_list
          single: (gabc_snippet
            (gabc_neume
              pitch: (pitch))))))
    (notation_item
      (syllable
        (syllable_style_small_caps
          (syllable
            (syllable_text))))
      (note_group
        (snippet_list
          single: (gabc_snippet
            (gabc_neume
              pitch: (pitch))))))
    (notation_item
      (syllable
        (syllable_style_teletype
          (syllable
            (syllable_text)))
        (syllable_text))
      (note_group
        (snippet_list
          single: (gabc_snippet
            (gabc_neume
              pitch: (pitch))))))
    (notation_item
      (note_group
        (snippet_list
          single: (gabc_snippet))))))

================================================================================
Syllable controls
================================================================================

name: Syllable controls test;

%%

<e>E</e>(f)<clear/><eu>u</eu>(g)<nlba>o</nlba>(h)<pr>ae(i)<pr:.3/>(j)

--------------------------------------------------------------------------------

(source_file
  (header_section
    (header
      name: (header_name)
      value: (header_value
        (single_line_header_value_terminated
          (single_line_header_value)))))
  (section_separator)
  (notation_section
    (notation_item
      (syllable
        (syllable_control_elision
          (syllable
            (syllable_text))))
      (note_group
        (snippet_list
          single: (gabc_snippet
            (gabc_neume
              pitch: (pitch))))))
    (notation_item
      (syllable
        (syllable_control_clear)
        (syllable_control_euouae
          (syllable
            (syllable_text))))
      (note_group
        (snippet_list
          single: (gabc_snippet
            (gabc_neume
              pitch: (pitch))))))
    (notation_item
      (syllable
        (syllable_control_no_line_break
          (syllable
            (syllable_text))))
      (note_group
        (snippet_list
          single: (gabc_snippet
            (gabc_neume
              pitch: (pitch))))))
    (notation_item
      (syllable
        (syllable_control_protrusion)
        (syllable_text))
      (note_group
        (snippet_list
          single: (gabc_snippet
            (gabc_neume
              pitch: (pitch))))))
    (notation_item
      (syllable
        (syllable_control_protrusion
          (syllable_control_protrusion_value)))
      (note_group
        (snippet_list
          single: (gabc_snippet
            (gabc_neume
              pitch: (pitch))))))))

================================================================================
Syllable other tags
================================================================================

name: Syllable other test;

%%

<alt>A</alt>(f)<sp>S</sp>(g)<v>V</v>(h)text(i)

--------------------------------------------------------------------------------

(source_file
  (header_section
    (header
      name: (header_name)
      value: (header_value
        (single_line_header_value_terminated
          (single_line_header_value)))))
  (section_separator)
  (notation_section
    (notation_item
      (syllable
        (syllable_other_above_lines_text
          (syllable
            (syllable_text))))
      (note_group
        (snippet_list
          single: (gabc_snippet
            (gabc_neume
              pitch: (pitch))))))
    (notation_item
      (syllable
        (syllable_other_special_character
          (syllable
            (syllable_text))))
      (note_group
        (snippet_list
          single: (gabc_snippet
            (gabc_neume
              pitch: (pitch))))))
    (notation_item
      (syllable
        (syllable_other_verbatim
          (syllable_verbatim_text)))
      (note_group
        (snippet_list
          single: (gabc_snippet
            (gabc_neume
              pitch: (pitch))))))
    (notation_item
      (syllable
        (syllable_text))
      (note_group
        (snippet_list
          single: (gabc_snippet
            (gabc_neume
              pitch: (pitch))))))))

================================================================================
Translation and centering
================================================================================

name: Other text tags test;

%%

Q{ui}(f)a(f) text[texto](g)$@end(h)

--------------------------------------------------------------------------------

(source_file
  (header_section
    (header
      name: (header_name)
      value: (header_value
        (single_line_header_value_terminated
          (single_line_header_value)))))
  (section_separator)
  (notation_section
    (notation_item
      (syllable
        (syllable_text)
        (syllable_centering
          (syllable_centering_text)))
      (note_group
        (snippet_list
          single: (gabc_snippet
            (gabc_neume
              pitch: (pitch))))))
    (notation_item
      (syllable
        (syllable_text))
      (note_group
        (snippet_list
          single: (gabc_snippet
            (gabc_neume
              pitch: (pitch))))))
    (notation_item
      (syllable
        (syllable_text)
        (syllable_translation
          (syllable_translation_text)))
      (note_group
        (snippet_list
          single: (gabc_snippet
            (gabc_neume
              pitch: (pitch))))))
    (notation_item
      (syllable
        (syllable_escape_sequence)
        (syllable_text))
      (note_group
        (snippet_list
          single: (gabc_snippet
            (gabc_neume
              pitch: (pitch))))))))
