test/corpus/01-no-lyrics.txt
=========
No lyrics
=========

name: No lyrics;

%%

(c4) () ()    ()()
()()()

()()()()

(::)

---

(source_file
  (header_section
    (header
      name: (header_name)
      value: (header_value
        (single_line_header_value))))
  (section_separator)
  (notation_section
    (syllable
      (note_group
        (snippet_list
          single: (gabc_snippet
            (gabc_clef)))))
    (syllable
      (note_group))
    (syllable
      (note_group))
    (syllable
      (note_group))
    (syllable
      (note_group))
    (syllable
      (note_group))
    (syllable
      (note_group))
    (syllable
      (note_group))
    (syllable
      (note_group))
    (syllable
      (note_group))
    (syllable
      (note_group))
    (syllable
      (note_group))
    (syllable
      (note_group
        (snippet_list
          single: (gabc_snippet
            (gabc_bar)))))))
