test/corpus/02-basic-lyrics.txt
============
Basic lyrics
============

name: Basic lyrics;

%%

(c4) Al()le()lú()ia,()

al()le()lú()ia,()     al()le()lú()ia.()

(::)

---

(source_file
  (header_section
    (header
      name: (header_name)
      value: (header_value
        (single_line_header_value))))
  (section_separator)
  (notation_section
    (notation_item
      (note_group
        (snippet_list
          single: (gabc_snippet
            (gabc_clef)))))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (syllable
        (syllable_text))
      (note_group))
    (notation_item
      (note_group
        (snippet_list
          single: (gabc_snippet
            (gabc_bar)))))))